[INFOI-19556] save jvm crash error file to log dir and add g1 enable